[package]
name = "sh-over-ws-actuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
# https://devblogs.microsoft.com/commandline/windows-command-line-introducing-the-windows-pseudo-console-conpty/
# https://github.com/zhiburt/conpty
# Windows alternative?
nix = "0.26"
async-trait = "0.1.68"
async-std = "1.12.0"
# interprocess = "1.2.1"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.28.4"
signal-hook = "0.3.15"
libc = "0.2.140"
anyhow = "1.0.70"
log = "0.4.17"
close_fds = "0.3.2"
tempfile = "3.4.0"
